--- a/index.html
+++ b/index.html
@@ -2304,19 +2304,7 @@
                     >
                 </div>
 
-                <!-- Botão para ajustar localização no mapa -->
-                <div class="form-group">
-                    <label class="form-label">📍 Localização do Cliente</label>
-                    <button type="button" class="btn-adjust-location" id="btn-adjust-location">
-                        <span class="material-icons">edit_location_alt</span>
-                        <span>Ajustar no Mapa</span>
-                        <span class="location-status" id="location-status">GPS atual</span>
-                    </button>
-                    <div class="location-hint" style="font-size: 11px; color: #666; margin-top: 4px;">
-                        💡 Arraste o marcador no mapa para posição exata
-                    </div>
-                </div>
-
+                <!-- Dropdown para selecionar endereço manualmente -->
                 <div class="form-group">
                     <label class="form-label">📋 Selecionar Endereço Manualmente</label>
 
@@ -2333,6 +2321,19 @@
 
                     <div class="address-list-hint" style="font-size: 11px; color: #666; margin-top: 4px;">
                         💡 Use quando não for possível ler o QR Code
+                    </div>
+                </div>
+
+                <!-- Botão para ajustar localização no mapa -->
+                <div class="form-group">
+                    <label class="form-label">📍 Localização do Cliente</label>
+                    <button type="button" class="btn-adjust-location" id="btn-adjust-location">
+                        <span class="material-icons">edit_location_alt</span>
+                        <span>Ajustar no Mapa</span>
+                        <span class="location-status" id="location-status">GPS atual</span>
+                    </button>
+                    <div class="location-hint" style="font-size: 11px; color: #666; margin-top: 4px;">
+                        💡 Arraste o marcador no mapa para posição exata
                     </div>
                 </div>
             </form>
