--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
     }
 
     .modal-body {
-        padding: 16px 20px;
+        padding: 12px 16px;
     }
 
     /* Custom Dropdown para Seleção de Endereço */
@@ -1326,7 +1326,11 @@
 
     /* Formulário */
     .form-group {
-        margin-bottom: 14px;
+        margin-bottom: 10px;
+    }
+
+    .form-group:last-child {
+        margin-bottom: 0;
     }
 
     .form-label {
@@ -1371,7 +1375,7 @@
     }
 
     .form-footer {
-        padding: 12px 20px;
+        padding: 10px 16px;
         border-top: 1px solid #e0e0e0;
         display: flex;
         gap: 12px;
