--- a/index.html
+++ b/index.html
@@ -592,9 +592,9 @@
     .modal-container {
         background: white;
         border-radius: 16px;
-        width: 92%;
-        max-width: 420px;
-        max-height: 70vh;
+        width: 90%;
+        max-width: 500px;
+        max-height: 90vh;
         overflow-y: auto;
         box-shadow: 0 10px 40px rgba(0,0,0,0.3);
         transform: scale(0.9);
@@ -627,7 +627,7 @@
     }
 
     .modal-body {
-        padding: 16px 20px;
+        padding: 12px 16px;
     }
 
     /* Custom Dropdown para Seleção de Endereço */
@@ -824,8 +824,8 @@
     #qr-video {
         width: 100%;
         height: auto;
-        max-height: 180px;
-        min-height: 140px;
+        max-height: 300px;
+        min-height: 200px;
         object-fit: cover;
         display: block;
         background: #000;
@@ -1326,7 +1326,11 @@
 
     /* Formulário */
     .form-group {
-        margin-bottom: 14px;
+        margin-bottom: 10px;
+    }
+
+    .form-group:last-child {
+        margin-bottom: 0;
     }
 
     .form-label {
@@ -1371,7 +1375,7 @@
     }
 
     .form-footer {
-        padding: 12px 20px;
+        padding: 10px 16px;
         border-top: 1px solid #e0e0e0;
         display: flex;
         gap: 12px;
